<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/backgroundImagePicker"
            android:text="@string/splash_page_title"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/email_address_hint"
                android:maxLines="1"
                android:textColor="@color/backgroundImagePicker"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/email_autofill"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:clickable="true"
                android:textSize="15sp"
                android:text="@string/auto_fill"
                android:layout_marginLeft="290sp"
                android:layout_marginTop="25sp"
                android:textColor="@color/backgroundImagePicker"/>

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/backgroundImagePicker"
            app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/backgroundImagePicker"
            android:textColorHint="@color/backgroundImagePicker"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:ems="5"
            android:text="@string/log_in_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:textColor="@color/backgroundImagePicker"/>

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:ems="15"
            android:textStyle="bold|italic"
            android:linksClickable="true"
            android:textAlignment="center"
            android:textColor="@color/backgroundImagePicker"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_have_account"/>

        </LinearLayout>

</LinearLayout>