<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ParticipantDetails"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/rejected_by_email_address"
            android:textColor="@color/backgroundImagePicker"/>

        <TextView
            android:id="@+id/logged_in_email_address"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/backgroundImagePicker"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20sp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/profile_picture_title"
                android:textColor="@color/backgroundImagePicker"/>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:clickable="true"
                android:contentDescription="@string/desc"/>

            <TextView

                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/tap_image_to_view_fullscreen"
                android:textColor="@color/backgroundImagePicker"/>

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/email_address_title"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/first_name_title"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:text="@string/last_name_title"
                    android:textStyle="bold"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/home_address_title"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/home_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/gender_title"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/contact_number_title"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/emergency_contact_number_title"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/emergency_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="20sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/birth_certificate_title"
                    android:textColor="@color/backgroundImagePicker"/>

                <ImageView
                    android:id="@+id/certificate"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:contentDescription="@string/desc"
                    android:clickable="true"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/tap_image_to_view_fullscreen"
                    android:textColor="@color/backgroundImagePicker"/>

                <TextView
                    android:id="@+id/age_group_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_gravity="center"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:background="@color/colorTranslucent"
                    android:textColor="@color/backgroundImagePicker"
                    android:textStyle="normal|bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/selected_games_title"
                    android:textColor="@color/backgroundImagePicker2"/>

                <TextView
                    android:id="@+id/selected_games"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="20sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/backgroundImagePicker"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/remove"
                    android:layout_width="80sp"
                    android:layout_height="50sp"
                    android:text="@string/remove_button"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="10sp"
                    android:layout_gravity="start"
                    android:textStyle="bold"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/backgroundImagePicker1"/>

                <Button

                    android:id="@+id/undo_reject"
                    android:layout_width="80sp"
                    android:layout_height="50sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginStart="20sp"
                    android:layout_gravity="end"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"
                    android:text="@string/home_button"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/backgroundImagePicker1"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>